proxy/envoy/envoy-L7.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      socket_options: # Here we'll DSCP value to this listener
        - level: 0        #  0 for IPPROTO_IP
          name: 1         #  1 for IP_TOS
          int_value: 64   #0x10 IPTOS_LOWDELAY  ==> 10000(00)=2^6=64  0x08 IPTOS_THROUGHPUT ==> 1000(00)=2^5=32
          state: STATE_PREBIND  #STATE_PREBIND is default, other 2 values are STATE_BOUND, STATE_LISTENING
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/http_conn_man#config-http-conn-man
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: HTTP2
              stat_prefix: ex
              use_remote_address: true
              http2_protocol_options:
                max_concurrent_streams: 1
              route_config: #https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/route_matching
                name: all
                virtual_hosts:
                  - name: example
                    domains:
                      - '*'
                    routes:
                      - match: { prefix: / } 
                        route:
                          cluster: cluster_0
              http_filters:
                - name: envoy.filters.http.router #https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#config-http-filters-router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    
  clusters:
    - name: cluster_0
      connect_timeout: 30s
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 1447 } 
      #commenting as keep hitting bind failures
      #upstream_bind_config: #options for bind of ephermeral socket used to communicate to endpoint
        #source_address: { address: 127.0.0.2, port_value: 9999 }
        #socket_options:
        #- level: 0        
          #name: 1         
          #int_value: 64   
          #state: STATE_PREBIND  
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options:
              max_concurrent_streams: 1
              initial_stream_window_size: 65536  # 64 KiB
              initial_connection_window_size: 1048576  # 1 MiB
